[gd_scene load_steps=16 format=3 uid="uid://devu4tlc0ntth"]

[ext_resource type="Script" path="res://scenes/NPC_scenes/character_0.gd" id="1_gfklu"]
[ext_resource type="Texture2D" uid="uid://u32h7o4bw72w" path="res://scenes/map/NPCs/characters.png" id="2_lkkv0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v2bks"]
atlas = ExtResource("2_lkkv0")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bsar"]
atlas = ExtResource("2_lkkv0")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlq4h"]
atlas = ExtResource("2_lkkv0")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxf2e"]
atlas = ExtResource("2_lkkv0")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7ew4"]
atlas = ExtResource("2_lkkv0")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkwcr"]
atlas = ExtResource("2_lkkv0")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaecf"]
atlas = ExtResource("2_lkkv0")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwlpo"]
atlas = ExtResource("2_lkkv0")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqf6i"]
atlas = ExtResource("2_lkkv0")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn5rl"]
atlas = ExtResource("2_lkkv0")
region = Rect2(320, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s1hm3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2bks")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bsar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlq4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxf2e")
}],
"loop": true,
"name": &"Walking Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7ew4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkwcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaecf")
}],
"loop": true,
"name": &"Walking Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwlpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqf6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn5rl")
}],
"loop": true,
"name": &"Walking Right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g0fie"]
radius = 26.9258

[sub_resource type="CircleShape2D" id="CircleShape2D_xy03m"]
radius = 58.0

[node name="character_5" type="CharacterBody2D"]
script = ExtResource("1_gfklu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s1hm3")
animation = &"Walking Right"
frame_progress = 0.185981

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 7)
shape = SubResource("CircleShape2D_g0fie")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="chat_detection_area" type="Area2D" parent="."]
position = Vector2(1, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_xy03m")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
